--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@google/gemini-cli-core",
+  "name": "@google/cybercli-core",
   "version": "0.1.13",
   "description": "Gemini CLI Core",
   "repository": {
